# Shift

./: .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/Models/CartoonPorsche/: Unity2Skfb.gltf
Assets/Models/Cube/: Cube.glb
Assets/Models/Porsche/: license.txt  scene.gltf
Assets/Models/SimpleAmogus/: license.txt  scene.gltf
Assets/Models/SimpleAmogusPink/: license.txt  scene.gltf
Assets/Models/Sphere/: sphere.glb
CMake/: dependancies.cmake
Shaders/: compile.bat  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
Shaders/Source/: Base.glsl  Extensions.glsl  Lights.glsl  Utility.glsl  VertexInputs.glsl
Shaders/Source/ConstantColor/: ConstantColor.frag  ConstantColor.vert
Shaders/Source/Emission/: EmissionForward.frag  EmissionForward.vert
Shaders/Source/PBR/: CookTorrance.glsl  PBRCookTorrance.frag  PBRCookTorrance.vert
Shaders/Source/PostProcess/: FullscreenTriangle.vert
Shaders/Source/PostProcess/Reinhard/: ReinhardToneMap.frag
Shaders/Source/PostProcess/ToneMapping/: ACESToneMap.frag  DisabledToneMap.frag  LotesTonemap.frag  LumaReinhardToneMap.frag  ReinhardToneMap.frag  RomBinDaHouseTonemap.frag  ToneMappingOperators.glsl  Uncharted2ToneMap.frag
Shaders/Source/SimpleLights/: SimpleLights.frag  SimpleLights.vert
Shaders/Source/Textured/: Textured.frag  Textured.vert
Source/: AppDefault.cpp  ShiftEngine.cpp  ShiftEngine.hpp  UniformBufferStructs.hpp  VertexStructures.hpp  main.cpp
Source/Config/: EngineConfig.hpp
Source/Graphics/: Renderer.cpp  Renderer.hpp  ShiftContextData.hpp
Source/Graphics/Abstraction/: BufferManager.cpp  BufferManager.hpp  DescriptorManagement.cpp  DescriptorManager.cpp  DescriptorManager.hpp  Model.cpp  Model.hpp  ModelManager.cpp  RenderTargetManager.cpp  RenderTargetManager.hpp  SamplerManager.hpp  TextureManager.cpp  TextureManager.hpp  UBOStructs.hpp  VertexStructures.hpp
Source/Graphics/Abstraction/Buffers/: BasicBuffers.cpp  BasicBuffers.hpp
Source/Graphics/Abstraction/Commands/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp
Source/Graphics/Abstraction/Descriptors/: BufferManager.cpp  BufferManager.hpp  DescriptorManagement.cpp  (+4 more)
Source/Graphics/Camera/: EulerCamera.cpp  EulerCamera.hpp
Source/Graphics/Commands/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp
Source/Graphics/Device/: Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Swapchain.cpp  Swapchain.hpp  WindowSurface.hpp
Source/Graphics/Objects/: LightTypes.hpp  Mesh.hpp  Model.cpp  Model.hpp  VertexStructures.hpp
Source/Graphics/Pipeline/: Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
Source/Graphics/RHI/: Base.hpp  Buffer.hpp  CommandBuffer.hpp  Fence.hpp  Pipeline.hpp  RHI.hpp  RHIContext.hpp  RHIDeferredExecutor.cpp  RHIDeferredExecutor.hpp  RHILocal_VK.hpp  RenderPass.hpp  ResourceSet.hpp  Sampler.hpp  Semaphore.hpp  Shader.hpp  Swapchain.hpp  Texture.hpp  TextureFormat.hpp  Types.hpp
Source/Graphics/RenderPass/: PassPrimitives.cpp  PassPrimitives.hpp  RenderPass.cpp  RenderPass.hpp
Source/Graphics/Synchronization/: Fence.cpp  Fence.hpp  Semaphore.cpp  Semaphore.hpp
Source/Graphics/Systems/: GeometrySystem.cpp  GeometrySystem.hpp  LightSystem.cpp  LightSystem.hpp  MeshSystem.cpp  MeshSystem.hpp  ModelManager.cpp  ModelManager.hpp  ModelSystem.cpp  ModelSystem.hpp  PostProcessSystem.cpp  PostProcessSystem.hpp  ProfilingSystem.cpp  ProfilingSystem.hpp  RenderStage.cpp  RenderStage.hpp  RenderTargetSystem.cpp  RenderTargetSystem.hpp  TextureSystem.cpp  TextureSystem.hpp
Source/Graphics/UI/: UIManager.cpp  UIManager.hpp  UIWindowComponent.cpp  UIWindowComponent.hpp
Source/Graphics/Wrapper/: Device.cpp  Device.hpp  Instance.cpp  WindowSurface.cpp  WindowSurface.hpp
Source/Input/: Keyboard.hpp  Mouse.hpp
Source/Tools/Timer/: FPSTimer.cpp  FPSTimer.hpp
Source/Utility/: Assertions.hpp  ShiftAssert.hpp  UtilFunctions.hpp  UtilStandard.cpp  UtilStandard.hpp  UtilVulkan.cpp  UtilVulkan.hpp
Source/Utility/Exceptions/: VulkanExceptions.hpp
Source/Utility/GUIDGenerator/: GUIDGenerator.cpp  GUIDGenerator.hpp
Source/Utility/Logging/: LogMacros.hpp
Source/Utility/Vulkan/: InfoUtil.cpp  InfoUtil.hpp  UtilVulkan.cpp  UtilVulkan.hpp  VKUtilCore.cpp  VKUtilCore.hpp  VKUtilInfo.cpp  VKUtilInfo.hpp  VKUtilRHI.cpp  VKUtilRHI.hpp  VMAUsage.cpp
Source/Window/: ShiftWindow.cpp  ShiftWindow.hpp
(+84 files in other folders)
